--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Hello World, me llamo Damara Martinez :)</h1>
+    <h2> Mi musica favorita es el: Rock en Español </h2>
 </body>
 </html>
