feat: cambio en h3

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hello World, me llamo Damara Martinez :)</h1>
     <h2> Mi musica favorita es el: Rock en Español </h2>
+    <h3> Mi comida preferida: Pechugas empanizadas </h3>
 </body>
 </html>
