feat: cambio en h5

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h2> Mi musica favorita es el: Rock en Español </h2>
     <h3> Mi comida preferida: Pechugas empanizadas </h3>
     <h4> Me gustan las series de investigaciones </h4>
+    <h5> Ser feliz es un estado </h5> 
 </body>
 </html>
